# high-performance-inference

./: .gitignore  CMakeLists.txt  README.md  SYSTEM_DESIGN.md  requirements.txt  test_tok
docs/: batch_config_changes.md  batch_executor_orchestrator_design.md  dashboard_live.html
include/: batch_executor.hpp  batch_executor_orchestrator.hpp  benchmark_config.hpp  kernels.cuh  memory.h  model_config.hpp  tokenizer.h
include/layers/: attention.h  transformer.h
include/pipeline/: execution_strategy.hpp  metrics.hpp  pipeline_engine.hpp
src/: batch_executor.cpp  batch_executor_orchestrator.cpp  main.cpp  memory.cpp  tokenizer.cpp  transformer.cpp
src/kernels/: activation.cu  addition.cu  batched_gemm.cu  batched_one_to_one_gemm.cu  batched_upper_triangulation.cu  embedding.cu  gemm.cu  layernorm.cu  sampling.cu  softmax.cu  transpose.cu
src/layers/: attention.cpp  feed_forward.cpp  layer_norm.cpp  transformer.cpp  transformer_block.cpp
src/pipeline/: pipeline_engine.cpp
src/utils/: loader.cpp
tests/: bench_performance.cu  sampling.cu  test_addition.cu  test_attention.cu  test_batched_gemm.cu  test_batched_one_to_one_gemm.cu  test_batched_upper_triangulation.cu  test_embedding.cu  test_feed_forward.cu  test_gemm.cu  test_layernorm.cu  test_softmax.cu  test_transformer.cu  test_transpose.cu
tools/: ct2_baseline.py  debug_attention_trace.py  gpt2_exporter.py  gpt2_inference.py  hf_baseline.py  llama_baseline.py  onnx_baseline.py  plot_benchmarks.py  python_get_attention_output.py  python_get_feed_forward_output.py  python_get_transformer_output.py  run_all_benchmarks.py  vllm_baseline.py
